packages/podlite-schema/src/grammarfc.pegjs
{
   function flattenDeep(arr) {
   return arr.reduce((acc, val) => Array.isArray(val) ? acc.concat(flattenDeep(val)) : acc.concat(val), []);
  }
  function get_pair_tag (tag) {
    const  map = {'<':'>', '«':'»','>':'<', '»':'«'}
    return map[tag]
  }
  // The closing run mirrors the opening one, so the pair is decided while parsing
  // instead of by generating a copy of the rule for every pair the language allows.
  function closeFor (open) {
    return open[0] === '«' ? '»' : '>'.repeat(open.length)
  }
  function closeAt (src, pos, open) {
    const close = closeFor(open)
    return src.substr(pos, close.length) === close
  }
  function link_target (spec) {
    const trimmed = spec.replace(/\s+$/, '')
    const quote = trimmed[0]
    if ((quote === "'" || quote === '"') && trimmed.length > 1 && trimmed[trimmed.length - 1] === quote) {
      return trimmed.slice(1, -1)
    }
    return trimmed
  }
  // callers hand the block-attribute parser in through options; without it the
  // text stays as written rather than being dropped
  function link_items (attrs, options) {
    const read = options && options.parseAttributes
    return typeof read === 'function' ? read(attrs) : attrs
  }
  // codes a `=config C<>` declaration lets act inside that code
  function inner_allowed (options, owner) {
    const map = options && options.allowedIn
    const list = map && map[owner]
    return Array.isArray(list) ? list : []
  }
}

Expression
= ( allowed_rules / code_2 / text / raw_text )*
// = ( allowed_rules / code / (text / raw_text)+ {return {type:'text', value:text()}} )*

allowed_rules = code_A / code_S / code_C / code_D / code_E / code_V / code_L / code_X / code_Z 
allpossible_codes = ( 'A' / 'V' / 'R' / 'B' / 'I' / 'C' / 'D' / 'E' / 'F' / 'G' / 'H' / 'J' / 'K' / 'L' / 'O' / 'S' / 'T' / 'U' / 'W' / 'Z' / 'N' / 'X' )
identifier = $([a-zA-Z][a-zA-Z0-9_-]*)
_ = [ \t\u000C]*
allowed_code = 
            char:allpossible_codes
            &{ return   !(options.allowed || [] ).length  //allow all formatting codes by default
                           ||  
                        (options.allowed || [] ).includes(char)
            }

raw_text= $(.)
// identifier_A = $((!hs .)+)
// content_A = ( !end_code _ id:$(identifier)? _ { return id } )?
// content_A = ( !end_code _ id:$(identifier_A)? _ { return id } )?
FCodeSimple<Letter, Content>
  = name:$Letter
    &{ return !(options.allowed || []).length || (options.allowed || []).includes(name) }
    begin_tag:$('<' / '«')
    content:Content
    end_tag:end_code
    &{ return end_tag === get_pair_tag(begin_tag) }
    { return { content, type: 'fcode', name } }

fcode_content_verbatim = $(!end_code .)*
fcode_content_V = $(text_C)+
fcode_content_D = ( text_L )+
fcode_content_X = ( text_L )*

FCodeWithArray<Letter, ContentRule>
  = name:$Letter
    &{ return !(options.allowed || []).length || (options.allowed || []).includes(name) }
    begin_tag:$('<' / '«')
    content:ContentRule
    items:( separator t:array_items* { return flattenDeep(t) } )?
    end_tag:end_code
    &{ return end_tag === get_pair_tag(begin_tag) }
    { return { name, content, items } }

code_A = FCodeSimple<"A", text_L>
code_V = &{ return inner_allowed(options, 'V').length > 0 } v:FCodeSimple<"V", fcode_content_V_mixed> { return v }
       / FCodeSimple<"V", fcode_content_V>

inner_code_C = node:( allowed_rules / code_2 ) &{ return inner_allowed(options, 'C').includes(node.name) } { return node }
inner_code_V = node:( allowed_rules / code_2 ) &{ return inner_allowed(options, 'V').includes(node.name) } { return node }
inner_start_C = name:$(allpossible_codes) ('<' / '«') &{ return inner_allowed(options, 'C').includes(name) }
inner_start_V = name:$(allpossible_codes) ('<' / '«') &{ return inner_allowed(options, 'V').includes(name) }
fcode_content_V_mixed = ( inner_code_V / $((!end_code !inner_start_V .)+) )+
code_S = FCodeSimple<"S", fcode_content_verbatim>
code_Z = FCodeSimple<"Z", fcode_content_verbatim>

code_D = r:FCodeWithArray<"D", fcode_content_D>
         { return { content: r.content, type: 'fcode', name: r.name, synonyms: r.items } }
code_X = r:FCodeWithArray<"X", fcode_content_X>
         { return { content: r.content, type: 'fcode', name: r.name, entry: r.items } }

allowed_code_C =('B')
looks_like_code_C =(!allowed_code_C .)  '<' not_code '>'  {return text()}  
     /
     (!allowed_code_C .)  '«' not_code '»'  {return text()}  
text_C = text:$( (!'<' .)? '<' text_C? '>'/ (!'«' .)? '«' text_C? '»' / looks_like_code_C / not_code )+ {return text}
// longest run first, so a doubled opening is not read as a single one
code_open  = $('<<<' / '<<' / '<' / '«')

CodeCRun
  = name:$(allowed_code) &{ return name === "C" } open:code_open
    content:(
        code_E
        /
        inner_code_C
        /
        text:$( (!'<' !start_code_E !inner_start_C .)? '<' text_C? '>'/ (!'«' !inner_start_C .)? '«' text_C? '»' / (!start_code_E !inner_start_C looks_like_code_C) / text:$(!{ return closeAt(input, location().start.offset, open) } !start_code_2 !looks_like_code .)+ {return text} )+ {return text} )+
    // the check sits inside the choice: a longer run matched first must be able to
    // give way to a shorter one, and after the choice there is nothing to give way to
    ( '>>>' &{ return open === '<<<' }
    / '>>'  &{ return open === '<<'  }
    / '>'   &{ return open === '<'   }
    / '»'   &{ return open === '«'   } )
     {
         return  {
                content,
                'type':"fcode",
                name,
             }
    }

code_C = CodeCRun
separator = '|'
text_L = text:$(
        (!'<' !allowed_code .) '<' text_L '>'
    / 
        (!'«' !allowed_code .)? '«' text_L? '»'
    / 
    !separator !end_code !start_code !looks_like_code . )+ { return text } 

// the configuration region opens at the first whitespace that a colon follows
// straight away; colons inside a URL carry no whitespace before them
link_spec = $( ( !( hs ':' ) !end_code . )* )
link_spec_filled = $( ( !( hs ':' ) !end_code . )+ )
link_config =
    hs+ t:$(
        ( ['] [^'\n\r]* ['] / ["] [^"\n\r]* ["] / '<' (!'>' .)* '>' / !end_code . )*
    ) { return t }

// L and W share the [text|]linkspec shape; W adds context to the reference
code_L =
    name:start_code_2 &{return name.code === "L" || name.code === "W"}
    content: (
               code_C  /  code_2  /  text_L
             )+
    separator
    spec:link_spec
    attrs:link_config
    end_tag:end_code &{ return  end_tag === name.end_tag}
    {
        return  {
               content,
               'type':"fcode",
               name:name.code,
               meta:link_target(spec),
               config:link_items(attrs, options)
            }
    }
    /
    name:start_code_2 &{return name.code === "L" || name.code === "W"}
    spec:link_spec_filled
    attrs:link_config
    end_tag:end_code &{ return  end_tag === name.end_tag}
    {
        return  {
               content:[link_target(spec)],
               'type':"fcode",
               name:name.code,
               meta:null,
               config:link_items(attrs, options)
            }
    }
    /
    name:start_code_2 &{return name.code === "L" || name.code === "W"}

    content: (
               code_C  /  code_2  /  text_L
             )+

     meta:(
            separator t:$(!end_code .)*  { return t }
           )?
     end_tag:end_code &{ return  end_tag === name.end_tag}
     {
         return  {
                content,
                'type':"fcode",
                name:name.code,
                meta
             }
    }
item = $(!';' !end_code .)+
hs = [ \u00a0\u2001\t\u000C\u2008]
array_items = 
          code:item hs*  ';' hs* codes:array_items 
                            { return flattenDeep([ code, codes ]) }
          / code:item { return [code] }



/*
    E<0b10101011> and E<0b10111011>.
    Podlite makes considerable use of E<171> and E<187>
    Podlite makes considerable use of E<0o253> and E<0o273>.
    Podlite makes considerable use of E<0d171> and E<0d187>.
    Podlite makes considerable use of E<0xAB> and E<0xBB>
    
    # HTML named &raquo;
    Podlite makes considerable use of E<laquo> and E<raquo>
    
    # Unicode character name
    Podlite makes considerable use of E<LEFT DOUBLE ANGLE BRACKET>
    and E<RIGHT DOUBLE ANGLE BRACKET>.

    Podlite makes considerable use of E<LEFT DOUBLE ANGLE BRACKET;hellip;0xBB>.
    
*/

// binary, octal, decimal, or hexadecimal numbers
number = $([0-9]+)
decimalNumber ='0d' number:number { return parseInt(number,10) }
octalNumber = '0o' number:number { return parseInt(number,8) }
binaryNumber = '0b' number:number { return parseInt(number,2) }
hexadecimalNumber = $('0x' ([0-9A-Fa-f])+) { return parseInt(text()) }
unicodeCharacterName = $([A-Z ]+) &{ return  text() === text().toUpperCase() } {return text()}
htmlNamedCharacterReference = s:$([a-z][a-z0-9]+) {return text()}


// Only numbers is supported at this time
//TODO: add Unicode character name
item_E =  _ number: ( octalNumber / decimalNumber / binaryNumber / hexadecimalNumber / number  ) { return { type: 'number', value:parseInt(number,10)}}
        / _ name: unicodeCharacterName { return { type: 'unicode_name', value:name}}
        / _ name: htmlNamedCharacterReference { return { type: 'html_named', value:name}}
            


array_E_items = 
          code:item_E hs*  ';' hs* codes:array_E_items 
                            { return flattenDeep([ code, codes ]) }
          / code:item_E { return [code] }

code_E = 
    name:start_code &{return name === "E"}
    content:  ( t:array_E_items { return flattenDeep(t) } )?
    end_code
     {
         return  { 
                content: content ? content : [],
                'type':"fcode",
                name
             }
    }

start_code = name:$(allowed_code) '<' { return name }
start_code_2 = name:$(allowed_code) begin_tag:$('<' / '«') { return {code:name,begin_tag,end_tag:get_pair_tag(begin_tag)} }
start_code_E = 'E' ('<' / '«')
end_code = '>' / '»'
// TODO: use later this declaration of code_2
// code_2 = 
//         name:start_code_2 &{ return name.code !== 'C' }
//         content:(  
//                   allowed_rules / code_2 /  text  
//            )* 
//         end_tag:end_code &{ return  end_tag === name.end_tag}  
// { return {content, type:'fcode', name:name.code }}

// A code is delimited by a run of angles, and the closing run has to be as long
// as the opening one. The pair is a parameter, so the literals consume their own
// length and a shorter run inside stays part of the content.
CodeRun
      = name:$(allowed_code) &{ return name !== 'C' } open:code_open
        content:(
                  allowed_rules / code_2 /
                  text:$( '<' text '>' / '«' text '»' / looks_like_code /
                    ( text:$(!{ return closeAt(input, location().start.offset, open) } !start_code_2 !looks_like_code .)+ {return text})
                                                                         )+ {return text}
           )*
        ( '>>>' &{ return open === '<<<' }
        / '>>'  &{ return open === '<<'  }
        / '>'   &{ return open === '<'   }
        / '»'   &{ return open === '«'   } )
{ return {content, type:'fcode', name }}

code_2 = CodeRun


empty =  $(!end_code .)*
//  text = text:$( '<' text '>' / looks_like_code / not_code )+ {return text}
text = text:$( '<' text '>' / '«' text '»' / looks_like_code / not_code  )+ {return text}

not_code = text:$(!end_code !start_code_2 !looks_like_code .)+ {return text}
looks_like_code =(!allowed_code .)  '<' not_code '>'  {return text()}  
     /
     (!allowed_code .)  '«' not_code '»'  {return text()}  
