packages/podlite-schema/src/grammarfc.js
/*
 * Generated by Pegmill 0.1.0
 *
 * https://github.com/zag/pegmill
 */

"use strict";

function peg$subclass(child, parent) {
  function ctor() { this.constructor = child; }
  ctor.prototype = parent.prototype;
  child.prototype = new ctor();
}

function peg$SyntaxError(message, expected, found, location) {
  this.message  = message;
  this.expected = expected;
  this.found    = found;
  this.location = location;
  this.name     = "SyntaxError";

  if (typeof Error.captureStackTrace === "function") {
    Error.captureStackTrace(this, peg$SyntaxError);
  }
}

peg$subclass(peg$SyntaxError, Error);

peg$SyntaxError.buildMessage = function(expected, found) {
  var DESCRIBE_EXPECTATION_FNS = {
        literal: function(expectation) {
          return "\"" + literalEscape(expectation.text) + "\"";
        },

        "class": function(expectation) {
          var escapedParts = "",
              i;

          for (i = 0; i < expectation.parts.length; i++) {
            escapedParts += expectation.parts[i] instanceof Array
              ? classEscape(expectation.parts[i][0]) + "-" + classEscape(expectation.parts[i][1])
              : classEscape(expectation.parts[i]);
          }

          return "[" + (expectation.inverted ? "^" : "") + escapedParts + "]";
        },

        any: function(expectation) {
          return "any character";
        },

        end: function(expectation) {
          return "end of input";
        },

        other: function(expectation) {
          return expectation.description;
        }
      };

  function hex(ch) {
    return ch.charCodeAt(0).toString(16).toUpperCase();
  }

  function literalEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/"/g,  '\\"')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function classEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/\]/g, '\\]')
      .replace(/\^/g, '\\^')
      .replace(/-/g,  '\\-')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function describeExpectation(expectation) {
    return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
  }

  function describeExpected(expected) {
    var descriptions = new Array(expected.length),
        i, j;

    for (i = 0; i < expected.length; i++) {
      descriptions[i] = describeExpectation(expected[i]);
    }

    descriptions.sort();

    if (descriptions.length > 0) {
      for (i = 1, j = 1; i < descriptions.length; i++) {
        if (descriptions[i - 1] !== descriptions[i]) {
          descriptions[j] = descriptions[i];
          j++;
        }
      }
      descriptions.length = j;
    }

    switch (descriptions.length) {
      case 1:
        return descriptions[0];

      case 2:
        return descriptions[0] + " or " + descriptions[1];

      default:
        return descriptions.slice(0, -1).join(", ")
          + ", or "
          + descriptions[descriptions.length - 1];
    }
  }

  function describeFound(found) {
    return found ? "\"" + literalEscape(found) + "\"" : "end of input";
  }

  return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
};

function peg$parse(input, options) {
  options = options !== void 0 ? options : {};

  var peg$FAILED = {},

      peg$startRuleFunctions = { Expression: peg$parseExpression },
      peg$startRuleFunction  = peg$parseExpression,

      peg$c0 = "A",
      peg$c1 = peg$literalExpectation("A", false),
      peg$c2 = "V",
      peg$c3 = peg$literalExpectation("V", false),
      peg$c4 = "R",
      peg$c5 = peg$literalExpectation("R", false),
      peg$c6 = "B",
      peg$c7 = peg$literalExpectation("B", false),
      peg$c8 = "I",
      peg$c9 = peg$literalExpectation("I", false),
      peg$c10 = "C",
      peg$c11 = peg$literalExpectation("C", false),
      peg$c12 = "D",
      peg$c13 = peg$literalExpectation("D", false),
      peg$c14 = "E",
      peg$c15 = peg$literalExpectation("E", false),
      peg$c16 = "F",
      peg$c17 = peg$literalExpectation("F", false),
      peg$c18 = "G",
      peg$c19 = peg$literalExpectation("G", false),
      peg$c20 = "H",
      peg$c21 = peg$literalExpectation("H", false),
      peg$c22 = "J",
      peg$c23 = peg$literalExpectation("J", false),
      peg$c24 = "K",
      peg$c25 = peg$literalExpectation("K", false),
      peg$c26 = "L",
      peg$c27 = peg$literalExpectation("L", false),
      peg$c28 = "O",
      peg$c29 = peg$literalExpectation("O", false),
      peg$c30 = "S",
      peg$c31 = peg$literalExpectation("S", false),
      peg$c32 = "T",
      peg$c33 = peg$literalExpectation("T", false),
      peg$c34 = "U",
      peg$c35 = peg$literalExpectation("U", false),
      peg$c36 = "W",
      peg$c37 = peg$literalExpectation("W", false),
      peg$c38 = "Z",
      peg$c39 = peg$literalExpectation("Z", false),
      peg$c40 = "N",
      peg$c41 = peg$literalExpectation("N", false),
      peg$c42 = "X",
      peg$c43 = peg$literalExpectation("X", false),
      peg$c44 = /^[a-zA-Z]/,
      peg$c45 = peg$classExpectation([["a", "z"], ["A", "Z"]], false, false),
      peg$c46 = /^[a-zA-Z0-9_\-]/,
      peg$c47 = peg$classExpectation([["a", "z"], ["A", "Z"], ["0", "9"], "_", "-"], false, false),
      peg$c48 = /^[ \t\f]/,
      peg$c49 = peg$classExpectation([" ", "\t", "\f"], false, false),
      peg$c50 = function(char) { return   !(options.allowed || [] ).length  //allow all formatting codes by default
                                 ||  
                              (options.allowed || [] ).includes(char)
                  },
      peg$c51 = peg$anyExpectation(),
      peg$c52 = function() { return inner_allowed(options, 'V').length > 0 },
      peg$c53 = function(v) { return v },
      peg$c54 = function(node) { return inner_allowed(options, 'C').includes(node.name) },
      peg$c55 = function(node) { return node },
      peg$c56 = function(node) { return inner_allowed(options, 'V').includes(node.name) },
      peg$c57 = "<",
      peg$c58 = peg$literalExpectation("<", false),
      peg$c59 = "\xAB",
      peg$c60 = peg$literalExpectation("\xAB", false),
      peg$c61 = function(name) { return inner_allowed(options, 'C').includes(name) },
      peg$c62 = function(name) { return inner_allowed(options, 'V').includes(name) },
      peg$c63 = function(r) { return { content: r.content, type: 'fcode', name: r.name, synonyms: r.items } },
      peg$c64 = function(r) { return { content: r.content, type: 'fcode', name: r.name, entry: r.items } },
      peg$c65 = ">",
      peg$c66 = peg$literalExpectation(">", false),
      peg$c67 = function() {return text()},
      peg$c68 = "\xBB",
      peg$c69 = peg$literalExpectation("\xBB", false),
      peg$c70 = function(text) {return text},
      peg$c71 = "<<<",
      peg$c72 = peg$literalExpectation("<<<", false),
      peg$c73 = "<<",
      peg$c74 = peg$literalExpectation("<<", false),
      peg$c75 = function(name) { return name === "C" },
      peg$c76 = function(name, open) { return closeAt(input, location().start.offset, open) },
      peg$c77 = function(name, open, text) {return text},
      peg$c78 = ">>>",
      peg$c79 = peg$literalExpectation(">>>", false),
      peg$c80 = function(name, open, content) { return open === '<<<' },
      peg$c81 = ">>",
      peg$c82 = peg$literalExpectation(">>", false),
      peg$c83 = function(name, open, content) { return open === '<<'  },
      peg$c84 = function(name, open, content) { return open === '<'   },
      peg$c85 = function(name, open, content) { return open === '«'   },
      peg$c86 = function(name, open, content) {
               return  {
                      content,
                      'type':"fcode",
                      name,
                   }
          },
      peg$c87 = "|",
      peg$c88 = peg$literalExpectation("|", false),
      peg$c89 = function(text) { return text },
      peg$c90 = ":",
      peg$c91 = peg$literalExpectation(":", false),
      peg$c92 = /^[']/,
      peg$c93 = peg$classExpectation(["'"], false, false),
      peg$c94 = /^[^'\n\r]/,
      peg$c95 = peg$classExpectation(["'", "\n", "\r"], true, false),
      peg$c96 = /^["]/,
      peg$c97 = peg$classExpectation(["\""], false, false),
      peg$c98 = /^[^"\n\r]/,
      peg$c99 = peg$classExpectation(["\"", "\n", "\r"], true, false),
      peg$c100 = function(t) { return t },
      peg$c101 = function(name) {return name.code === "L" || name.code === "W"},
      peg$c102 = function(name, content, spec, attrs, end_tag) { return  end_tag === name.end_tag},
      peg$c103 = function(name, content, spec, attrs, end_tag) {
              return  {
                     content,
                     'type':"fcode",
                     name:name.code,
                     meta:link_target(spec),
                     config:link_items(attrs, options)
                  }
          },
      peg$c104 = function(name, spec, attrs, end_tag) { return  end_tag === name.end_tag},
      peg$c105 = function(name, spec, attrs, end_tag) {
              return  {
                     content:[link_target(spec)],
                     'type':"fcode",
                     name:name.code,
                     meta:null,
                     config:link_items(attrs, options)
                  }
          },
      peg$c106 = function(name, content, t) { return t },
      peg$c107 = function(name, content, meta, end_tag) { return  end_tag === name.end_tag},
      peg$c108 = function(name, content, meta, end_tag) {
               return  {
                      content,
                      'type':"fcode",
                      name:name.code,
                      meta
                   }
          },
      peg$c109 = ";",
      peg$c110 = peg$literalExpectation(";", false),
      peg$c111 = /^[ \xA0\u2001\t\f\u2008]/,
      peg$c112 = peg$classExpectation([" ", "\xA0", "\u2001", "\t", "\f", "\u2008"], false, false),
      peg$c113 = function(code, codes) { return flattenDeep([ code, codes ]) },
      peg$c114 = function(code) { return [code] },
      peg$c115 = /^[0-9]/,
      peg$c116 = peg$classExpectation([["0", "9"]], false, false),
      peg$c117 = "0d",
      peg$c118 = peg$literalExpectation("0d", false),
      peg$c119 = function(number) { return parseInt(number,10) },
      peg$c120 = "0o",
      peg$c121 = peg$literalExpectation("0o", false),
      peg$c122 = function(number) { return parseInt(number,8) },
      peg$c123 = "0b",
      peg$c124 = peg$literalExpectation("0b", false),
      peg$c125 = function(number) { return parseInt(number,2) },
      peg$c126 = "0x",
      peg$c127 = peg$literalExpectation("0x", false),
      peg$c128 = /^[0-9A-Fa-f]/,
      peg$c129 = peg$classExpectation([["0", "9"], ["A", "F"], ["a", "f"]], false, false),
      peg$c130 = function() { return parseInt(text()) },
      peg$c131 = /^[A-Z ]/,
      peg$c132 = peg$classExpectation([["A", "Z"], " "], false, false),
      peg$c133 = function() { return  text() === text().toUpperCase() },
      peg$c134 = /^[a-z]/,
      peg$c135 = peg$classExpectation([["a", "z"]], false, false),
      peg$c136 = /^[a-z0-9]/,
      peg$c137 = peg$classExpectation([["a", "z"], ["0", "9"]], false, false),
      peg$c138 = function(s) {return text()},
      peg$c139 = function(number) { return { type: 'number', value:parseInt(number,10)}},
      peg$c140 = function(name) { return { type: 'unicode_name', value:name}},
      peg$c141 = function(name) { return { type: 'html_named', value:name}},
      peg$c142 = function(name) {return name === "E"},
      peg$c143 = function(name, t) { return flattenDeep(t) },
      peg$c144 = function(name, content) {
               return  { 
                      content: content ? content : [],
                      'type':"fcode",
                      name
                   }
          },
      peg$c145 = function(name) { return name },
      peg$c146 = function(name, begin_tag) { return {code:name,begin_tag,end_tag:get_pair_tag(begin_tag)} },
      peg$c147 = function(name) { return name !== 'C' },
      peg$c148 = function(name, open, content) { return {content, type:'fcode', name }},
      peg$c149 = function(name) { return !(options.allowed || []).length || (options.allowed || []).includes(name) },
      peg$c150 = function(name, begin_tag, content, end_tag) { return end_tag === get_pair_tag(begin_tag) },
      peg$c151 = function(name, begin_tag, content, end_tag) { return { content, type: 'fcode', name } },
      peg$c152 = function(name, begin_tag, content, t) { return flattenDeep(t) },
      peg$c153 = function(name, begin_tag, content, items, end_tag) { return end_tag === get_pair_tag(begin_tag) },
      peg$c154 = function(name, begin_tag, content, items, end_tag) { return { name, content, items } },

      peg$currPos          = 0,
      peg$savedPos         = 0,
      peg$posDetailsCache  = [{ line: 1, column: 1 }],
      peg$maxFailPos       = 0,
      peg$maxFailExpected  = [],
      peg$silentFails      = 0,

      peg$result;

  if ("startRule" in options) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildSimpleError(message, location);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text: text, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase) {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos) {
    var details = peg$posDetailsCache[pos], p;

    if (details) {
      return details;
    } else {
      p = pos - 1;
      while (!peg$posDetailsCache[p]) {
        p--;
      }

      details = peg$posDetailsCache[p];
      details = {
        line:   details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;
      return details;
    }
  }

  function peg$computeLocation(startPos, endPos) {
    var startPosDetails = peg$computePosDetails(startPos),
        endPosDetails   = peg$computePosDetails(endPos);

    return {
      start: {
        offset: startPos,
        line:   startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line:   endPosDetails.line,
        column: endPosDetails.column
      }
    };
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parseExpression() {
    var s0, s1;

    s0 = [];
    s1 = peg$parseallowed_rules();
    if (s1 === peg$FAILED) {
      s1 = peg$parseCodeRun();
      if (s1 === peg$FAILED) {
        s1 = peg$parsetext();
        if (s1 === peg$FAILED) {
          s1 = peg$parseraw_text();
        }
      }
    }
    while (s1 !== peg$FAILED) {
      s0.push(s1);
      s1 = peg$parseallowed_rules();
      if (s1 === peg$FAILED) {
        s1 = peg$parseCodeRun();
        if (s1 === peg$FAILED) {
          s1 = peg$parsetext();
          if (s1 === peg$FAILED) {
            s1 = peg$parseraw_text();
          }
        }
      }
    }

    return s0;
  }

  function peg$parseallowed_rules() {
    var s0;

    s0 = peg$parseFCodeSimple$A$text_L();
    if (s0 === peg$FAILED) {
      s0 = peg$parseFCodeSimple$S$fcode_content_verbatim();
      if (s0 === peg$FAILED) {
        s0 = peg$parseCodeCRun();
        if (s0 === peg$FAILED) {
          s0 = peg$parsecode_D();
          if (s0 === peg$FAILED) {
            s0 = peg$parsecode_E();
            if (s0 === peg$FAILED) {
              s0 = peg$parsecode_V();
              if (s0 === peg$FAILED) {
                s0 = peg$parsecode_L();
                if (s0 === peg$FAILED) {
                  s0 = peg$parsecode_X();
                  if (s0 === peg$FAILED) {
                    s0 = peg$parseFCodeSimple$Z$fcode_content_verbatim();
                  }
                }
              }
            }
          }
        }
      }
    }

    return s0;
  }

  function peg$parseallpossible_codes() {
    var s0;

    if (input.charCodeAt(peg$currPos) === 65) {
      s0 = peg$c0;
      peg$currPos++;
    } else {
      s0 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c1); }
    }
    if (s0 === peg$FAILED) {
      if (input.charCodeAt(peg$currPos) === 86) {
        s0 = peg$c2;
        peg$currPos++;
      } else {
        s0 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c3); }
      }
      if (s0 === peg$FAILED) {
        if (input.charCodeAt(peg$currPos) === 82) {
          s0 = peg$c4;
          peg$currPos++;
        } else {
          s0 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c5); }
        }
        if (s0 === peg$FAILED) {
          if (input.charCodeAt(peg$currPos) === 66) {
            s0 = peg$c6;
            peg$currPos++;
          } else {
            s0 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c7); }
          }
          if (s0 === peg$FAILED) {
            if (input.charCodeAt(peg$currPos) === 73) {
              s0 = peg$c8;
              peg$currPos++;
            } else {
              s0 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$c9); }
            }
            if (s0 === peg$FAILED) {
              if (input.charCodeAt(peg$currPos) === 67) {
                s0 = peg$c10;
                peg$currPos++;
              } else {
                s0 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$c11); }
              }
              if (s0 === peg$FAILED) {
                if (input.charCodeAt(peg$currPos) === 68) {
                  s0 = peg$c12;
                  peg$currPos++;
                } else {
                  s0 = peg$FAILED;
                  if (peg$silentFails === 0) { peg$fail(peg$c13); }
                }
                if (s0 === peg$FAILED) {
                  if (input.charCodeAt(peg$currPos) === 69) {
                    s0 = peg$c14;
                    peg$currPos++;
                  } else {
                    s0 = peg$FAILED;
                    if (peg$silentFails === 0) { peg$fail(peg$c15); }
                  }
                  if (s0 === peg$FAILED) {
                    if (input.charCodeAt(peg$currPos) === 70) {
                      s0 = peg$c16;
                      peg$currPos++;
                    } else {
                      s0 = peg$FAILED;
                      if (peg$silentFails === 0) { peg$fail(peg$c17); }
                    }
                    if (s0 === peg$FAILED) {
                      if (input.charCodeAt(peg$currPos) === 71) {
                        s0 = peg$c18;
                        peg$currPos++;
                      } else {
                        s0 = peg$FAILED;
                        if (peg$silentFails === 0) { peg$fail(peg$c19); }
                      }
                      if (s0 === peg$FAILED) {
                        if (input.charCodeAt(peg$currPos) === 72) {
                          s0 = peg$c20;
                          peg$currPos++;
                        } else {
                          s0 = peg$FAILED;
                          if (peg$silentFails === 0) { peg$fail(peg$c21); }
                        }
                        if (s0 === peg$FAILED) {
                          if (input.charCodeAt(peg$currPos) === 74) {
                            s0 = peg$c22;
                            peg$currPos++;
                          } else {
                            s0 = peg$FAILED;
                            if (peg$silentFails === 0) { peg$fail(peg$c23); }
                          }
                          if (s0 === peg$FAILED) {
                            if (input.charCodeAt(peg$currPos) === 75) {
                              s0 = peg$c24;
                              peg$currPos++;
                            } else {
                              s0 = peg$FAILED;
                              if (peg$silentFails === 0) { peg$fail(peg$c25); }
                            }
                            if (s0 === peg$FAILED) {
                              if (input.charCodeAt(peg$currPos) === 76) {
                                s0 = peg$c26;
                                peg$currPos++;
                              } else {
                                s0 = peg$FAILED;
                                if (peg$silentFails === 0) { peg$fail(peg$c27); }
                              }
                              if (s0 === peg$FAILED) {
                                if (input.charCodeAt(peg$currPos) === 79) {
                                  s0 = peg$c28;
                                  peg$currPos++;
                                } else {
                                  s0 = peg$FAILED;
                                  if (peg$silentFails === 0) { peg$fail(peg$c29); }
                                }
                                if (s0 === peg$FAILED) {
                                  if (input.charCodeAt(peg$currPos) === 83) {
                                    s0 = peg$c30;
                                    peg$currPos++;
                                  } else {
                                    s0 = peg$FAILED;
                                    if (peg$silentFails === 0) { peg$fail(peg$c31); }
                                  }
                                  if (s0 === peg$FAILED) {
                                    if (input.charCodeAt(peg$currPos) === 84) {
